fixed tests and added list to env vars

--- a/.env_sample
+++ b/.env_sample
@@ -4,7 +4,8 @@ SES_USERNAME=""
 SES_USER_ID=""
 SES_PASSWORD=""
 SES_FROM=""
-SES_TO=""
+SES_TO='["recpient_1_@mail.com", "recpient_2_@mail.com"]'
+MARKETS='["^SPX", "^NDX"]'
 
 IMAGE_NAME="rsi-mfi-notify"
 TAG="prod"
